--- a/about_us.html
+++ b/about_us.html
@@ -5,14 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/grund_layout.css">
-    <link rel="stylesheet" href="/css/undersider/forside.css">
+    <link rel="stylesheet" href="/css/undersider/about_us.css">
     
     
-    <title>Forside</title>
+    <title>Om os</title>
 </head>
-
-
-
 
 
 <body>
