--- a/events.html
+++ b/events.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/grund_layout.css">
-    <link rel="stylesheet" href="/css/undersider/forside.css">
+    <link rel="stylesheet" href="/css/undersider/events.css">
     
     
-    <title>Forside</title>
+    <title>Events Booking</title>
 </head>
 
 
