--- a/about_us.html
+++ b/about_us.html
@@ -30,7 +30,17 @@
     </header>
 
     <main>
-
+        <div class="grid1-3"> <!--lav en grid1-3 og style den i under css'-->
+            <img src="">
+            <section>
+                <h2>
+                    Om Os
+                </h2>
+                <p>
+                    brødtekst
+                </p>
+            </section>
+        </div>
     
 
     </main>
