--- a/about_us.html
+++ b/about_us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,8 +30,9 @@
     </header>
 
     <main>
-        <div class="grid1-3"> <!--lav en grid1-3 og style den i under css'-->
-            <img src="">
+        <div class="om-os">
+            <div class="grid1-2">
+                <img src="https://picsum.photos/200" alt="" class="filler1">
             <section>
                 <h2>
                     Om Os
@@ -40,8 +41,13 @@
                     brødtekst
                 </p>
             </section>
+            </div>
         </div>
-    
+    <div id="logoGrid">
+        <p id="OHLogo">
+            OH Logo
+        </p>
+    </div>
 
     </main>
     
