--- a/about_us.html
+++ b/about_us.html
@@ -53,7 +53,7 @@
             </div>
         </div>
     <div id="logoGrid">
-      <img src="../Virksomhedssite_05/img/OLES HUS.png" alt="Oles Hus Logo" id="OHLogo">
+      <img src="./img/OLES HUS.png" alt="Oles Hus Logo" id="OHLogo">
     </div>
 
     </main>
