--- a/events.html
+++ b/events.html
@@ -51,7 +51,7 @@
         </div>
 
         <div id="div_form">
-             <form id="form1" name=”kontakt” netlify>
+             <form id="form1" name="contact" netlify>
                  Subject:<br>
                  <input type="text" name="subject" placeholder="Your Name"><br>
                  Email:<br>
