leget rundt med baggrunds farver

--- a/about_us.html
+++ b/about_us.html
@@ -30,32 +30,34 @@
     </header>
 
     <main>
-        <div class="om-os">
-            <div class="grid1-2">
-                <img src="https://picsum.photos/200" alt="" class="filler1">
-            <section>
-                <h2>
-                    Om Os
-                </h2>
-                <p>
-                    Da jeg var barn… var Gentoftegade kedelig, mørk og trist. Sådan husker jeg det altså. Men den engang lidt kedelige Gentoftegade summer i dag af liv og landsbystemning. Der er spisesteder, specialforretninger, dagligvarebutikker, biograf, bibliotek, bager & blomsterhandel. Og midt i det hele ligger Oles Hus, som et hjerte der hjælper med at få den lokale puls til at banke.
-                </p>
-                <p>
-                    Oles Hus er beviset på, at vi gerne vil hinanden i lokalsamfundet. Vi gemmer os ikke alle sammen bag ligusterhækken, men nyder at møde gamle og nye venner og bekendte i uformelle rammer.
-                </p>
-                <p>
-                    -Peter Bækbo Ahn
-                </p>
-                <p>
-                    Kom ned og vær med - vi glæder os til at se dig.
-                </p>
-            </section>
+        <div id="background_opacity">
+            <div class="om-os">
+                <div class="grid1-2">
+                    <img src="https://picsum.photos/200" alt="" class="filler1">
+                <section>
+                    <h2>
+                        Om Os
+                    </h2>
+                    <p>
+                        Da jeg var barn… var Gentoftegade kedelig, mørk og trist. Sådan husker jeg det altså. Men den engang lidt kedelige Gentoftegade summer i dag af liv og landsbystemning. Der er spisesteder, specialforretninger, dagligvarebutikker, biograf, bibliotek, bager & blomsterhandel. Og midt i det hele ligger Oles Hus, som et hjerte der hjælper med at få den lokale puls til at banke.
+                    </p>
+                    <p>
+                        Oles Hus er beviset på, at vi gerne vil hinanden i lokalsamfundet. Vi gemmer os ikke alle sammen bag ligusterhækken, men nyder at møde gamle og nye venner og bekendte i uformelle rammer.
+                    </p>
+                    <p>
+                        -Peter Bækbo Ahn
+                    </p>
+                    <p>
+                        Kom ned og vær med - vi glæder os til at se dig.
+                    </p>
+                </section>
+                </div>
+            </div>
+            <div id="logoGrid">
+                <img src="./img/OLES HUS.png" alt="Oles Hus Logo" id="OHLogo">
+                <!-- erstat OLES HUS.png med ny version -->
             </div>
         </div>
-    <div id="logoGrid">
-      <img src="./img/OLES HUS.png" alt="Oles Hus Logo" id="OHLogo">
-    </div>
-
     </main>
     
     <footer>
