--- a/info.html
+++ b/info.html
@@ -29,6 +29,7 @@
     </header>
 
     <main>
+<div id="background_opacity">
 
     <div id="opening-time">
         <h2>Åbningstider</h2>
@@ -65,7 +66,7 @@
 
         <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2245.6745620092947!2d12.539043415930333!3d55.746783280551746!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46524d7ef906390b%3A0x4f01d0e8bcd158c4!2sOles%20Hus%20-%20Kaffe%20%26%20Vinbar!5e0!3m2!1sen!2sdk!4v1684345381261!5m2!1sen!2sdk" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
-
+</div>
     </main>
     
     <footer>
