--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 
     <div id="background_opacity">
 
-        <div id="video">
-            <iframe  height="450" src="https://www.youtube.com/embed/mExpTyqvCkw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <div id="video1">
+                <video src="https://gbogh.dk/KEA/05_content/oleshus_video/Oles_hus_video.mp4" controls poster="/img/thumbnail.png" preload="auto" muted></video>
         </div>
 
         <div id="velkommen">
                 <div id="velkommen_tekst">
-                <h2> Velkommen</h2>
+                <h1>Velkommen</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident illo culpa illum? Odio tempore nam ad amet possimus eius officiis. Praesentium, itaque? Consequatur doloribus explicabo in quo tempore at repudiandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque autem est tenetur sint alias et ab sequi iure. Blanditiis rerum repellat perferendis in! Eius soluta reiciendis sit quisquam et omnis!</p>
                 </div>
         </div>
