--- a/info.html
+++ b/info.html
@@ -46,20 +46,17 @@
 
     <div id="guide">
         <div id="information">
-            <section class="information">
-                <h2>Kontakt informationer & adresse</h2>
-                <h3>Adresse</h3>
+            <section class="info">
+                <h3>OLES HUS - KAFFE & VINBAR</h3>
                 <p>
-                    Gentoftegade 41, Gentofte, Denmark
-                </p>
-            </section>
+                    Adresse <br>
+                    Gentoftegade 41 <br>
+                    2820 Gentofte, Denmark <br> <br>
+                    Ring til os <br>
+                    Tlf. +45 31 31 44 15 <br><br>
 
-            <section class="information">
-                <h3>Kontakt informationer</h3>
-                <p>
-                    Tlf: +45 3131 4415 <br><br>
-    
-                    Email: Gentoftegade41@gmail.com
+                    Skriv os en mail <br>
+                    Gentoftegade41@gmail.com
                 </p>
             </section>
         </div>
