--- a/about_us.html
+++ b/about_us.html
@@ -58,7 +58,8 @@
                 </div>
             </div>
             <div id="logoGrid">
-                <img src="./img/oles_Hus_logo.webp" alt="Oles Hus Logo" id="OHLogo">            </div>
+                <img src="./img/oles_Hus_logo.webp" alt="Oles Hus Logo" id="OHLogo">            
+            </div>
         </div>
     </main>
     
