--- a/events.html
+++ b/events.html
@@ -24,7 +24,8 @@
                <img src="img/oles_Hus_logo.webp" alt="">
             </a>
            </div>
-        <nav>
+        <nav class="main-menu">
+            <button type="button"   class="toggle-btn"> <img src="img/burger.svg" alt="button image"></button>
             <ul> 
                 
                 <li> <a href="index.html">Forside</a></li>
@@ -72,7 +73,7 @@
                  Email:<br>
                  <input type="email" name="email" placeholder="Your Email"><br>
                   Message:<br>
-                  <textarea name="body" rows="3.5" cols="75" placeholder="Your Message"></textarea><br>
+                  <textarea name="body" rows="3.5" cols="54" placeholder="Your Message"></textarea><br>
                  <input type="submit" value="Send">
                  <p>OBS: Åbner E-mail klient</p>
           </form>
