--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v16.0" nonce="ubVChcIs"></script>
 
     <header>
-            <div id="nav_img">
-             <a href="index.html">
-                <img src="img/oles_Hus_logo.webp" alt="">
-             </a>
-            </div>
-        <nav>
-            
+        <div id="nav_img">
+            <a href="index.html">
+               <img src="img/oles_Hus_logo.webp" alt="">
+            </a>
+           </div>
+        <nav class="main-menu">
+            <button type="button"   class="toggle-btn"> <img src="img/burger.svg" alt="button image"></button>
             <ul> 
+                
                 <li> <a href="index.html">Forside</a></li>
                 <li> <a href="menu.html">Menu</a></li>
                 <li> <a href="events.html">Event Booking</a></li>
