About us responsive + video thumbnail

--- a/about_us.html
+++ b/about_us.html
@@ -58,7 +58,9 @@
                 </div>
             </div>
             <div id="logoGrid">
-                <img src="./img/oles_Hus_logo.webp" alt="Oles Hus Logo" id="OHLogo">            
+                <a href="index.html" id="logoA">
+                    <img src="./img/oles_Hus_logo.webp" alt="Oles Hus Logo" id="OHLogo">
+                </a>            
             </div>
         </div>
     </main>
