--- a/events.html
+++ b/events.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex">
     <link rel="stylesheet" href="css/grund_layout.css">
     <link rel="stylesheet" href="css/undersider/events.css">
     
@@ -68,11 +69,11 @@
 
         <div id="div_form">
              <form id="form1" name="contact" netlify>
-                 Subject:<br>
+                 Emne:<br>
                  <input type="text" name="subject" placeholder="Your Name"><br>
                  Email:<br>
                  <input type="email" name="email" placeholder="Your Email"><br>
-                  Message:<br>
+                  Besked:<br>
                   <textarea name="body" rows="3.5" cols="54" placeholder="Your Message"></textarea><br>
                  <input type="submit" value="Send">
                  <p>OBS: Åbner E-mail klient</p>
