--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex">
     <link rel="stylesheet" href="css/grund_layout.css">
     <link rel="stylesheet" href="css/undersider/forside.css">
     
@@ -65,7 +66,7 @@
 
         <div id="facebook">
             <img src="img/kealder_vindue copy.webp" alt="">
-            <div class="fb-page" data-href="https://www.facebook.com/oleshus?locale=da_DK" data-tabs="timeline" data-width="500" data-height="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/oleshus?locale=da_DK" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/oleshus?locale=da_DK">Oles Hus</a></blockquote></div>
+            <div class="fb-page" data-href="https://www.facebook.com/oleshus?locale=da_DK" data-tabs="timeline" data-width="500" data-height="500"  data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/oleshus?locale=da_DK" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/oleshus?locale=da_DK">Oles Hus</a></blockquote></div>
         </div>
 
         <div id="filler1">
