skrift fonter og størrelser

--- a/events.html
+++ b/events.html
@@ -80,7 +80,7 @@
           </form>
 
         <div id="event_info">
-            <h3>Kontant informationer</h3>
+            <h3>Kontant informationer:</h3>
             <h3>Tlf: +45 3131 4415</h3>
             <h3>Email: Gentoftegade41@gmail.com</h3>
         </div>
