--- a/events.html
+++ b/events.html
@@ -8,9 +8,10 @@
     <meta name="robots" content="noindex">
     <link rel="stylesheet" href="css/grund_layout.css">
     <link rel="stylesheet" href="css/undersider/events.css">
-    
-    
+
     <title>Events Booking</title>
+            <link rel="icon" type="image/x-icon" href="img/oles_Hus_favicon.webp">
+
 </head>
 
 
