--- a/index.html
+++ b/index.html
@@ -18,9 +18,14 @@
 
 
 <body>
+
+    <!-- Til facebook Plugin -->
+
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v16.0" nonce="ubVChcIs"></script>
 
+    <!-- Til facebook Plugin -->
+    
     <header>
         <div id="nav_img">
             <a href="index.html">
@@ -47,7 +52,7 @@
     <div id="background_opacity">
 
         <div id="video1">
-                <video src="https://gbogh.dk/KEA/05_content/oleshus_video/Oles_hus_video.mp4" controls poster="/img/thumbnail.png" preload="auto" muted></video>
+                <video src="https://gbogh.dk/KEA/05_content/oleshus_video/Oles_hus_video.mp4" controls poster="img/vidThumbnail.webp" preload="auto" muted></video>
         </div>
 
         <div id="velkommen">
