Menu index changes

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <div id="menu_index">
             <div id="menu_index_tekst">
-            <h2>Gå da ind og kig på vores menu</h2>
+            <h2>Hos Oles Hus tilbyder vi en bred vifte af forskellige forfriskninger, der strækker sig fra et bredt vin sortiment til friskbrygget barista kaffe, alt sammen serveret i et hyggeligt lokalt miljø med plads til alle.</h2>
            <h3> <a href="menu.html ">Menu</a></h3>
             </div>
             <img src="img/øl_flasker_wide.webp" alt="">
