--- a/menu.html
+++ b/menu.html
@@ -43,11 +43,11 @@
                         <button id="snacksKnap">Snacks</button>
                     </div>
                     
-                        <div id="pdf-holder">
-                            <object id="vinPdf" data="pdf/Oles-Hus-menu_copy.pdf" type="application/pdf" height="100%" width="100%"></object>
-                            <object id="cocktailsPdf" data="" type="application/pdf" height="100%" width="100%"></object>
-                            <object id="snacksPdf" data="" type="application/pdf" height="100%" width="100%"></object>
-                        </div>
+                    <div id="pdf-holder">
+                        <embed id="vinPdf" src="pdf/Oles-Hus-menu_copy.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" height="100%" width="100%">
+                        <embed id="cocktailsPdf" src="pdf/Oles-Hus-menu_copy.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" height="100%" width="100%">
+                        <embed id="snacksPdf" src="pdf/Oles-Hus-menu_copy.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" height="100%" width="100%">
+                    </div>
             </div>
     </main>
     
