Menu fuldstændig færdig

--- a/menu.html
+++ b/menu.html
@@ -44,6 +44,7 @@
                     </div>
                     
                     <div id="pdf-holder">
+                        <h2 id="pdfText">Ovenfor kan du vælge, hvilken Menu du gerne vil se.</h2>
                         <embed id="vinPdf" src="pdf/Oles-Hus-menu_copy.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" height="100%" width="100%">
                         <embed id="cocktailsPdf" src="pdf/Oles-Hus-menu_copy.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" height="100%" width="100%">
                         <embed id="snacksPdf" src="pdf/Oles-Hus-menu_copy.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" height="100%" width="100%">
