--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
                     
                     Så kom ned, mød os i baren og nyd fordel af vores aktiviteter (aktive arrangementer), quiz, live musik m.m..
                     </p>
-                    <p>Vi glæder os til at se dig.
-                        Velkommen hos OLES HUS</p>
+                    <p> Velkommen hos OLES HUS </p>
+                    <p>Vi glæder os til at se dig. </p>
+                    
                 </div>
         </div>
 
