video no auto mute

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div id="background_opacity">
 
         <div id="video1">
-                <video src="https://gbogh.dk/KEA/05_content/oleshus_video/Oles_hus_video.mp4" controls poster="img/vidThumbnail.webp" preload="auto" muted></video>
+                <video src="https://gbogh.dk/KEA/05_content/oleshus_video/Oles_hus_video.mp4" controls poster="img/vidThumbnail.webp" preload="auto" ></video>
         </div>
 
         <div id="velkommen">
