funny text xDDD

--- a/about_us.html
+++ b/about_us.html
@@ -50,7 +50,7 @@
                     <p>
                         Oles Hus er beviset på, at vi gerne vil hinanden i lokalsamfundet. Vi gemmer os ikke alle sammen bag ligusterhækken, men nyder at møde gamle og nye venner og bekendte i uformelle rammer.
                     </p>
-                    <p>
+                    <p id="PBA">
                         -Peter Bækbo Ahn
                     </p>
                     <p>
