--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     
 
     <script src="/js/nav.js"></script>
-    <!-- <script src="js/login.js"></script> -->
+    <script src="js/login.js"></script>
 </body>
 </html>
 
