background image new location

--- a/galleri.html
+++ b/galleri.html
@@ -11,7 +11,7 @@
     <title>Galleri</title>
 </head>
 
-<body>
+<body style="background-image: url(img/background_bar.webp);">
 
     <header>
         <div id="nav_img">
