--- a/info.html
+++ b/info.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/x-icon" href="img/oles_Hus_favicon.webp">
 </head>
 
-<body>
+<body style="background-image: url(img/background_bar.webp);">
 
     <header>
         <div id="nav_img">
